<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieResult"
            type="com.themoviedb.model.MovieResults" />


        <variable
            name="movieDetailModel"
            type="com.themoviedb.model.MovieDetailsModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGenre"
                style="@style/textView"
                android:layout_width="0dp"
                android:maxLines="3"
                android:text="@{movieDetailModel.movieSynopsis.genreString}"
                android:textSize="@dimen/default_textsize"
                app:layout_constraintEnd_toStartOf="@+id/llUserScore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRuntime"
                style="@style/textView"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:text='@{String.format("%s%s%s","Runtime: ",movieDetailModel.movieSynopsis.runtimeString," h")}'
                android:textSize="@dimen/default_textsize"
                app:layout_constraintEnd_toStartOf="@+id/llUserScore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLanguage"
                style="@style/textView"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:ellipsize="end"
                android:maxLines="3"
                android:text='@{String.format("%s%s","Language: ",movieDetailModel.movieSynopsis.languageString)}'
                android:textSize="@dimen/default_textsize"
                app:layout_constraintEnd_toStartOf="@+id/llUserScore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRuntime" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llUserScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/tvLanguage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvGenre">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblVoteAvg"
                    style="@style/textView"
                    android:fontFamily="@font/dm_serif_display_regular"
                    android:text="@string/lbl_vote_avg"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/large_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvVoteAvg"
                    style="@style/withAlphaTextView"
                    android:layout_marginStart="@dimen/tiny_small_margin"
                    android:text='@{String.format("%.2f",movieDetailModel.movieSynopsis.voteAverage)}'
                    android:textSize="@dimen/default_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivHeart"
                    app:layout_constraintTop_toBottomOf="@+id/lblVoteAvg" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivHeart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_heart"
                    app:layout_constraintBottom_toBottomOf="@+id/tvVoteAvg"
                    app:layout_constraintEnd_toStartOf="@+id/tvVoteAvg"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvVoteAvg" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblOverview"
                style="@style/textView"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/dm_serif_display_regular"
                android:text="@string/lbl_overview"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/heading_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOverview"
                style="@style/textView"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{movieResult.overview}"
                android:textSize="@dimen/default_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblOverview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblCast"
                style="@style/textView"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/dm_serif_display_regular"
                android:text="@string/lbl_cast"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/heading_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/lblCast"
                tools:listitem="@layout/row_cast" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblProduction"
                style="@style/textView"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/dm_serif_display_regular"
                android:text="@string/lbl_production"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/heading_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/lblProduction" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblFinancial"
                style="@style/textView"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/dm_serif_display_regular"
                android:text="@string/lbl_financial"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/heading_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvProduction" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llFinanceBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/lite_blue_shade"
                android:padding="@dimen/small_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblFinancial">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivMoneyBag"
                    android:layout_width="@dimen/small_image"
                    android:layout_height="@dimen/small_image"
                    android:src="@drawable/ic_money_bag"
                    app:layout_constraintBottom_toBottomOf="@+id/llBudgetRevenueBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@id/llBudgetRevenueBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/ivProfitLoss"
                    app:layout_constraintStart_toEndOf="@+id/ivMoneyBag"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lblBudget"
                        style="@style/textView"
                        android:layout_marginStart="@dimen/default_margin"
                        android:fontFamily="@font/dm_serif_display_regular"
                        android:text="@string/lbl_budget"
                        android:textSize="@dimen/large_textsize"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvBudget"
                        style="@style/textView"
                        android:fontFamily="@font/dm_serif_display_italic"
                        android:text="@{movieDetailModel.movieSynopsis.budgetString}"
                        android:textSize="@dimen/default_textsize"
                        app:layout_constraintStart_toStartOf="@+id/lblBudget"
                        app:layout_constraintTop_toBottomOf="@+id/lblBudget"
                        tools:text="@string/dummy_number" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lblRevenue"
                        style="@style/textView"
                        android:layout_marginStart="@dimen/default_margin"
                        android:fontFamily="@font/dm_serif_display_regular"
                        android:text="@string/lbl_revenue"
                        android:textSize="@dimen/large_textsize"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/lblBudget"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRevenue"
                        style="@style/textView"
                        android:fontFamily="@font/dm_serif_display_italic"
                        android:text="@{movieDetailModel.movieSynopsis.revenueString}"
                        android:textSize="@dimen/default_textsize"
                        app:layout_constraintStart_toStartOf="@+id/lblRevenue"
                        app:layout_constraintTop_toBottomOf="@+id/lblRevenue"
                        tools:text="@string/dummy_number" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivProfitLoss"
                    android:layout_width="@dimen/small_image"
                    android:layout_height="@dimen/small_image"
                    android:src="@drawable/ic_profit"
                    android:tint="@color/green"
                    app:layout_constraintBottom_toBottomOf="@+id/llBudgetRevenueBox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/llBudgetRevenueBox"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblReview"
                style="@style/textView"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/dm_serif_display_regular"
                android:text="@string/lbl_reviews"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/heading_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llFinanceBox" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMoreReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/lblReview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lblReview" />

            <include
                android:id="@+id/llReviewBox"
                layout="@layout/row_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblReview" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblSimilarMovies"
                style="@style/textView"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/dm_serif_display_regular"
                android:text="@string/lbl_similar_movies"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/heading_textsize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llReviewBox" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSimilarMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/lblSimilarMovies"
                tools:listitem="@layout/row_cast" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>